--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -1,26 +1,4 @@
-.card-hover {
-    transition: 0.2s all ease-in-out;
-    -webkit-transition: 0.2s all ease-in-out;
-    -moz-transition: 0.2s all ease-in-out;
-    -ms-transition: 0.2s all ease-in-out;
-    -o-transition: 0.2s all ease-in-out;
+.card-wrapper {
+  width: 100%;
+  margin-top: 1em;
 }
-
-.card-hover:hover {
-  transform: scale(1.05);
-  -webkit-transform: scale(1.05);
-  -moz-transform: scale(1.05);
-  -ms-transform: scale(1.05);
-  -o-transform: scale(1.05);
-}
-
-.card-image {
-  height: 600px;
-}
-
-.image {
-  overflow: hidden;
-  width: auto;
-  height: 100%;
-}
-
